@@ -1,3 +1,12 @@
+2000-10-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* smtpserver/smtpdata.c:
+	    Parse possible "contentpolicy" analysis report, and present
+	    it (in several cases) to the user.
+
+	* smtpserver/smtphelp.c:
+	    Small fixes for help presentation, and parameter recognition.
+
 2000-10-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* smtpserver/smtpdata.c, smtpserver/smtphelp.c, smtpserver/smtptls.c,
